--- a/content/docs/leetcode/04-longest-palindrome.mdx
+++ b/content/docs/leetcode/04-longest-palindrome.mdx
@@ -172,20 +172,20 @@ describe('longest palindrome', () => {
 
 | 步驟 | 字符 | Set 狀態 | 配對數 | 說明 |
 |------|------|----------|--------|------|
-| 1 | a | {a} | 0 | 新字符 |
-| 2 | b | {a,b} | 0 | 新字符 |
-| 3 | c | {a,b,c} | 0 | 新字符 |
-| 4 | c | {a,b} | 2 | 找到配對 |
-| 5 | c | {a,b,c} | 2 | 新字符 |
-| 6 | c | {a,b} | 4 | 找到配對 |
-| 7 | d | {a,b,d} | 4 | 新字符 |
-| 8 | d | {a,b} | 6 | 找到配對 |
+| 1 | 'a' | {'a'} | 0 | 新字符 |
+| 2 | 'b' | {'a','b'} | 0 | 新字符 |
+| 3 | 'c' | {'a','b','c'} | 0 | 新字符 |
+| 4 | 'c' | {'a','b'} | 2 | 找到配對 |
+| 5 | 'c' | {'a','b','c'} | 2 | 新字符 |
+| 6 | 'c' | {'a','b'} | 4 | 找到配對 |
+| 7 | 'd' | {'a','b','d'} | 4 | 新字符 |
+| 8 | 'd' | {'a','b'} | 6 | 找到配對 |
 
 最終：配對數 6 + 剩餘字符 1 = 7
 
 #### 回文串構造示例
 - 配對: cc, cc, dd (6 個字符)
-- 中心: a 或 b (1 個字符)
+- 中心: 'a' 或 'b' (1 個字符)
 - 可能的回文串: "dccaccd" 或 "dccbccd"
 </Tab>
 </Tabs>
