Internationalize LeetCode content for global accessibility
- Remove Chinese text from all titles, descriptions, and introductions
- Convert to English-only content for better international reach
- Update all 14 LeetCode problems with proper English descriptions
- Maintain technical accuracy while improving global readability

Changes:
- Titles: Remove Chinese translations (e.g., "Two Sum - 兩數之和" → "Two Sum")
- Descriptions: Convert to English algorithm explanations
- Introductions: Replace Chinese problem statements with English equivalents
- Build verified: All pages compile and render correctly

--- a/content/docs/leetcode/01-two-sum.mdx
+++ b/content/docs/leetcode/01-two-sum.mdx
@@ -1,6 +1,6 @@
 ---
-title: Two Sum - 兩數之和
-description: 使用 Hash Map 解決兩數之和問題，時間複雜度 O(n)
+title: Two Sum
+description: Find two numbers that add up to target using Hash Map - O(n) time complexity
 icon: Hash
 ---
 
@@ -8,7 +8,7 @@ import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 import { Steps, Step } from 'fumadocs-ui/components/steps';
 
-> 給定一個整數數組和目標值，找出兩個數的索引使其和等於目標值
+> Find two numbers in an array that add up to a target value
 
 ## 問題描述
 
