--- a/content/docs/leetcode/02-climbing-stairs.mdx
+++ b/content/docs/leetcode/02-climbing-stairs.mdx
@@ -1,6 +1,6 @@
 ---
-title: Climbing Stairs - 爬樓梯
-description: 使用動態規劃求解爬樓梯問題，斐波那契數列的經典應用
+title: Climbing Stairs
+description: Dynamic programming solution using Fibonacci sequence pattern
 icon: TrendingUp
 ---
 
@@ -8,7 +8,7 @@ import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 import { Steps, Step } from 'fumadocs-ui/components/steps';
 
-> 計算到達頂樓的不同方法數，每次可以爬 1 或 2 個階梯
+> Calculate number of distinct ways to climb stairs, taking 1 or 2 steps at a time
 
 ## 問題描述
 
