--- a/content/docs/leetcode/03-ransom-note.mdx
+++ b/content/docs/leetcode/03-ransom-note.mdx
@@ -1,6 +1,6 @@
 ---
-title: Ransom Note - 贖金信
-description: 使用 Hash Map 判斷能否從雜誌中構造贖金信
+title: Ransom Note
+description: Check if ransom note can be constructed from magazine using Hash Map
 icon: FileText
 ---
 
@@ -8,7 +8,7 @@ import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 import { Steps, Step } from 'fumadocs-ui/components/steps';
 
-> 判斷是否可以用雜誌中的字母來構造贖金信
+> Determine if a ransom note can be constructed from magazine letters
 
 ## 問題描述
 
