--- a/content/docs/leetcode/04-longest-palindrome.mdx
+++ b/content/docs/leetcode/04-longest-palindrome.mdx
@@ -1,6 +1,6 @@
 ---
-title: Longest Palindrome - 最長回文串
-description: 使用 Set 計算能構成的最長回文串長度
+title: Longest Palindrome
+description: Calculate longest palindrome length using Set for character pairing
 icon: Repeat
 ---
 
@@ -8,7 +8,7 @@ import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 import { Steps, Step } from 'fumadocs-ui/components/steps';
 
-> 給定一個包含大小寫字母的字符串，計算能構成的最長回文串長度
+> Given a string of letters, calculate the length of the longest palindrome that can be built
 
 ## 問題描述
 
