--- a/content/docs/leetcode/05-add-binary.mdx
+++ b/content/docs/leetcode/05-add-binary.mdx
@@ -1,6 +1,6 @@
 ---
-title: Add Binary - 二進制求和
-description: 實現二進制字符串相加，支持任意長度的二進制數運算
+title: Add Binary
+description: Add two binary strings and return their sum in binary format
 icon: Plus
 ---
 
@@ -8,7 +8,7 @@ import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 import { Steps, Step } from 'fumadocs-ui/components/steps';
 
-> 給定兩個二進制字符串，返回它們的和（也是一個二進制字符串）
+> Add two binary strings and return the sum as a binary string
 
 ## 問題描述
 
