--- a/content/docs/leetcode/06-insert-interval.mdx
+++ b/content/docs/leetcode/06-insert-interval.mdx
@@ -1,6 +1,6 @@
 ---
-title: Insert Interval - 插入區間
-description: 將新區間插入已排序的無重疊區間列表中，自動合併重疊部分
+title: Insert Interval
+description: Insert a new interval into sorted non-overlapping intervals and merge if necessary
 icon: Layers
 ---
 
@@ -8,7 +8,7 @@ import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 import { Steps, Step } from 'fumadocs-ui/components/steps';
 
-> 在有序區間列表中插入新區間並合併重疊部分
+> Insert a new interval into a sorted list of non-overlapping intervals
 
 ## 問題描述
 
