--- a/content/docs/leetcode/07-01-matrix.mdx
+++ b/content/docs/leetcode/07-01-matrix.mdx
@@ -1,6 +1,6 @@
 ---
-title: 01 Matrix - 01 矩陣
-description: 使用多源 BFS 算法計算矩陣中每個位置到最近 0 的距離
+title: 01 Matrix
+description: Calculate distance to nearest 0 for each cell using multi-source BFS
 icon: Grid3x3
 ---
 
@@ -8,7 +8,7 @@ import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 import { Steps, Step } from 'fumadocs-ui/components/steps';
 
-> 計算矩陣中每個位置到最近 0 的最短距離
+> Calculate the shortest distance from each cell to the nearest 0
 
 ## 問題描述
 
