--- a/content/docs/leetcode/08-maximum-depth-of-binary-tree.mdx
+++ b/content/docs/leetcode/08-maximum-depth-of-binary-tree.mdx
@@ -1,6 +1,6 @@
 ---
-title: Maximum Depth of Binary Tree - 二叉樹的最大深度
-description: 使用遞歸求解二叉樹的最大深度，樹遍歷的經典問題
+title: Maximum Depth of Binary Tree
+description: Find the maximum depth of a binary tree using recursive traversal
 icon: TreePine
 ---
 
@@ -8,7 +8,7 @@ import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 import { Steps, Step } from 'fumadocs-ui/components/steps';
 
-> 計算二叉樹從根節點到最遠葉子節點的最長路徑上的節點數
+> Find the maximum number of nodes along the longest path from root to leaf
 
 ## 問題描述
 
