--- a/content/docs/leetcode/09-reverse-linked-list.mdx
+++ b/content/docs/leetcode/09-reverse-linked-list.mdx
@@ -1,6 +1,6 @@
 ---
-title: Reverse Linked List - 反轉鏈表
-description: 使用迭代方法反轉單向鏈表，掌握指針操作技巧
+title: Reverse Linked List
+description: Reverse a singly linked list using iterative approach with pointer manipulation
 icon: RotateCcw
 ---
 
@@ -8,7 +8,7 @@ import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 import { Steps, Step } from 'fumadocs-ui/components/steps';
 
-> 反轉一個單向鏈表，返回新的頭節點
+> Reverse a singly linked list and return the new head
 
 ## 問題描述
 
