--- a/content/docs/leetcode/10-contains-duplicate.mdx
+++ b/content/docs/leetcode/10-contains-duplicate.mdx
@@ -1,6 +1,6 @@
 ---
-title: Contains Duplicate - 存在重複元素
-description: 使用 Set 或 Map 檢測數組中是否存在重複元素
+title: Contains Duplicate
+description: Detect if array contains duplicate elements using Set or Map
 icon: Copy
 ---
 
@@ -8,7 +8,7 @@ import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 import { Steps, Step } from 'fumadocs-ui/components/steps';
 
-> 判斷給定數組中是否存在重複的整數
+> Determine if an array contains any duplicate elements
 
 ## 問題描述
 
