--- a/content/docs/leetcode/12-maximum-subarray.mdx
+++ b/content/docs/leetcode/12-maximum-subarray.mdx
@@ -1,6 +1,6 @@
 ---
-title: Maximum Subarray - 最大子數組
-description: 使用 Kadane 算法求解最大子數組和，動態規劃經典問題
+title: Maximum Subarray
+description: Find the contiguous subarray with maximum sum using Kadane's algorithm
 icon: BarChart3
 ---
 
@@ -8,7 +8,7 @@ import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 import { Steps, Step } from 'fumadocs-ui/components/steps';
 
-> 找出連續子數組的最大和，動態規劃的經典應用
+> Find the contiguous subarray with the largest sum
 
 ## 問題描述
 
