--- a/content/docs/leetcode/13-middle-of-the-linked-list.mdx
+++ b/content/docs/leetcode/13-middle-of-the-linked-list.mdx
@@ -1,6 +1,6 @@
 ---
-title: Middle of the Linked List - 鏈表的中間結點
-description: 使用快慢雙指針找出鏈表的中間節點，一次遍歷解決問題
+title: Middle of the Linked List
+description: Find the middle node of a linked list using two-pointer technique
 icon: Link
 ---
 
@@ -8,7 +8,7 @@ import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 import { Steps, Step } from 'fumadocs-ui/components/steps';
 
-> 使用雙指針技巧在一次遍歷中找到鏈表的中間節點
+> Find the middle node of a linked list using fast and slow pointers
 
 ## 問題描述
 
