--- a/content/docs/leetcode/14-diameter-of-binary-tree.mdx
+++ b/content/docs/leetcode/14-diameter-of-binary-tree.mdx
@@ -1,6 +1,6 @@
 ---
-title: Diameter of Binary Tree - 二叉樹的直徑
-description: 計算二叉樹中任意兩節點間的最長路徑，結合深度計算的技巧
+title: Diameter of Binary Tree
+description: Find the longest path between any two nodes in a binary tree
 icon: Diameter
 ---
 
@@ -8,7 +8,7 @@ import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 import { Steps, Step } from 'fumadocs-ui/components/steps';
 
-> 計算二叉樹中任意兩個節點之間最長路徑的長度
+> Calculate the length of the longest path between any two nodes in a binary tree
 
 ## 問題描述
 
