--- a/content/docs/leetcode/11-majority-element.mdx
+++ b/content/docs/leetcode/11-majority-element.mdx
@@ -1,6 +1,6 @@
 ---
-title: Majority Element - 多數元素
-description: 使用排序法找出數組中出現次數大於 n/2 的元素
+title: Majority Element
+description: Find the element that appears more than n/2 times using sorting approach
 icon: TrendingUp
 ---
 
@@ -8,7 +8,7 @@ import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Callout } from 'fumadocs-ui/components/callout';
 import { Steps, Step } from 'fumadocs-ui/components/steps';
 
-> 找出數組中出現次數大於 ⌊n/2⌋ 的元素
+> Find the element that appears more than half the time in an array
 
 ## 問題描述
 
